--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1",
-    "sequelize-bcrypt": "^1.2.0"
+    "sequelize-bcrypt": "^1.2.0",
+    "stripe": "^15.5.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.10",
