--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-PORT=3000
-USER_DB=root
-PASSWORD_DB=1234
-HOST_DB=localhost
-PORT_DB=3306
+PORT=1433
+USER_DB=jehuan
+PASSWORD_DB=29Jude19ns@
+HOST_DB=74.208.32.103
+PORT_DB=1433
 NAME_DB=compumovil
 PRIVATE_KEY="contrasenasupersecreta"
