--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.1",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "mssql": "^11.0.1",
     "mysql2": "^3.6.0",
     "sequelize": "^6.32.1",
     "sequelize-bcrypt": "^1.2.0",
